Update composer packages

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .idea
 .cursor
+.vscode
 .env
 vendor
 starlight-docs/
+go-proxy/
 
-# go-proxy binary files
 bin/go-proxy
-bin/go-proxy.exe
 bin/.go-proxy-version
